Fix modal z-index

--- a/src/modal/Modal.module.css
+++ b/src/modal/Modal.module.css
@@ -4,7 +4,7 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 1;
   top: 0;
   
   &.interactive {
